gen/minipascalParser.java
// Generated from D:/Users/mathe/Desktop/analisador_lexico/.idea\minipascal.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class minipascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, AP=14, FP=15, AC=16, FC=17, ACOL=18, 
		FCOL=19, TWODOTS=20, SC=21, C=22, OP=23, RELACAO=24, ID=25, NUMBER=26, 
		DIGITO=27, LETRA=28, INT=29, WS=30, True=31, False=32, RESERVADAS=33;
	public static final int
		RULE_prog = 0, RULE_bloco = 1, RULE_decvariaveis = 2, RULE_decvars = 3, 
		RULE_list_ids = 4, RULE_decrotinas = 5, RULE_decproceds = 6, RULE_formalparams = 7, 
		RULE_paramsession = 8, RULE_tipo = 9, RULE_inteiro = 10, RULE_booleano = 11, 
		RULE_floate = 12, RULE_stringei = 13, RULE_comando = 14, RULE_cmd = 15, 
		RULE_cmdattrib = 16, RULE_cmdproced = 17, RULE_cmdcondic = 18, RULE_cmdrepeat = 19, 
		RULE_cmdREAD = 20, RULE_cmdWRITE = 21, RULE_expr = 22, RULE_termo = 23, 
		RULE_expression = 24, RULE_simpleexpression = 25, RULE_fator = 26, RULE_variavel = 27, 
		RULE_listexpressions = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "bloco", "decvariaveis", "decvars", "list_ids", "decrotinas", 
			"decproceds", "formalparams", "paramsession", "tipo", "inteiro", "booleano", 
			"floate", "stringei", "comando", "cmd", "cmdattrib", "cmdproced", "cmdcondic", 
			"cmdrepeat", "cmdREAD", "cmdWRITE", "expr", "termo", "expression", "simpleexpression", 
			"fator", "variavel", "listexpressions"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'procedure'", "'var'", "'begin'", "'end'", "'if'", 
			"'then'", "'else'", "'while'", "'do'", "'leia'", "'escreva'", "'not'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "';'", "','", null, 
			null, null, null, null, null, "'INT'", null, "'True'", "'False'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "AP", "FP", "AC", "FC", "ACOL", "FCOL", "TWODOTS", "SC", 
			"C", "OP", "RELACAO", "ID", "NUMBER", "DIGITO", "LETRA", "INT", "WS", 
			"True", "False", "RESERVADAS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "minipascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public minipascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(minipascalParser.ID, 0); }
		public TerminalNode SC() { return getToken(minipascalParser.SC, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			match(ID);
			setState(60);
			match(SC);
			setState(61);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public TerminalNode ACOL() { return getToken(minipascalParser.ACOL, 0); }
		public TerminalNode FCOL() { return getToken(minipascalParser.FCOL, 0); }
		public DecvariaveisContext decvariaveis() {
			return getRuleContext(DecvariaveisContext.class,0);
		}
		public DecrotinasContext decrotinas() {
			return getRuleContext(DecrotinasContext.class,0);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(63);
				comando();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(ACOL);
				{
				setState(65);
				decvariaveis();
				}
				setState(66);
				match(FCOL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				match(ACOL);
				{
				setState(69);
				decrotinas();
				}
				setState(70);
				match(FCOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecvariaveisContext extends ParserRuleContext {
		public TerminalNode AC() { return getToken(minipascalParser.AC, 0); }
		public List<TerminalNode> SC() { return getTokens(minipascalParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(minipascalParser.SC, i);
		}
		public DecvarsContext decvars() {
			return getRuleContext(DecvarsContext.class,0);
		}
		public TerminalNode FC() { return getToken(minipascalParser.FC, 0); }
		public DecvariaveisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decvariaveis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterDecvariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitDecvariaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitDecvariaveis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecvariaveisContext decvariaveis() throws RecognitionException {
		DecvariaveisContext _localctx = new DecvariaveisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decvariaveis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(AC);
			setState(75);
			match(SC);
			setState(76);
			decvars();
			setState(77);
			match(FC);
			setState(78);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecvarsContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List_idsContext list_ids() {
			return getRuleContext(List_idsContext.class,0);
		}
		public DecvarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decvars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterDecvars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitDecvars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitDecvars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecvarsContext decvars() throws RecognitionException {
		DecvarsContext _localctx = new DecvarsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decvars);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			tipo();
			setState(81);
			list_ids();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_idsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(minipascalParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(minipascalParser.ID, i);
		}
		public TerminalNode C() { return getToken(minipascalParser.C, 0); }
		public TerminalNode AC() { return getToken(minipascalParser.AC, 0); }
		public List<TerminalNode> FC() { return getTokens(minipascalParser.FC); }
		public TerminalNode FC(int i) {
			return getToken(minipascalParser.FC, i);
		}
		public List_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterList_ids(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitList_ids(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitList_ids(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_idsContext list_ids() throws RecognitionException {
		List_idsContext _localctx = new List_idsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list_ids);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(84);
			match(C);
			setState(85);
			match(AC);
			{
			setState(86);
			match(ID);
			}
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87);
					match(FC);
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecrotinasContext extends ParserRuleContext {
		public TerminalNode AC() { return getToken(minipascalParser.AC, 0); }
		public DecprocedsContext decproceds() {
			return getRuleContext(DecprocedsContext.class,0);
		}
		public TerminalNode SC() { return getToken(minipascalParser.SC, 0); }
		public TerminalNode FC() { return getToken(minipascalParser.FC, 0); }
		public DecrotinasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decrotinas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterDecrotinas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitDecrotinas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitDecrotinas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecrotinasContext decrotinas() throws RecognitionException {
		DecrotinasContext _localctx = new DecrotinasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decrotinas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(AC);
			setState(94);
			decproceds();
			setState(95);
			match(SC);
			setState(96);
			match(FC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecprocedsContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public FormalparamsContext formalparams() {
			return getRuleContext(FormalparamsContext.class,0);
		}
		public TerminalNode SC() { return getToken(minipascalParser.SC, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public DecprocedsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decproceds; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterDecproceds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitDecproceds(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitDecproceds(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecprocedsContext decproceds() throws RecognitionException {
		DecprocedsContext _localctx = new DecprocedsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decproceds);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__1);
			setState(99);
			tipo();
			setState(100);
			formalparams();
			setState(101);
			match(SC);
			setState(102);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalparamsContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(minipascalParser.AP, 0); }
		public List<ParamsessionContext> paramsession() {
			return getRuleContexts(ParamsessionContext.class);
		}
		public ParamsessionContext paramsession(int i) {
			return getRuleContext(ParamsessionContext.class,i);
		}
		public TerminalNode AC() { return getToken(minipascalParser.AC, 0); }
		public TerminalNode SC() { return getToken(minipascalParser.SC, 0); }
		public TerminalNode FC() { return getToken(minipascalParser.FC, 0); }
		public TerminalNode FP() { return getToken(minipascalParser.FP, 0); }
		public FormalparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterFormalparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitFormalparams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitFormalparams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalparamsContext formalparams() throws RecognitionException {
		FormalparamsContext _localctx = new FormalparamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formalparams);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(AP);
			setState(105);
			paramsession();
			setState(106);
			match(AC);
			setState(107);
			match(SC);
			setState(108);
			paramsession();
			setState(109);
			match(FC);
			setState(110);
			match(FP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsessionContext extends ParserRuleContext {
		public TerminalNode ACOL() { return getToken(minipascalParser.ACOL, 0); }
		public TerminalNode FCOL() { return getToken(minipascalParser.FCOL, 0); }
		public List_idsContext list_ids() {
			return getRuleContext(List_idsContext.class,0);
		}
		public TerminalNode TWODOTS() { return getToken(minipascalParser.TWODOTS, 0); }
		public TerminalNode ID() { return getToken(minipascalParser.ID, 0); }
		public ParamsessionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsession; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterParamsession(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitParamsession(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitParamsession(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsessionContext paramsession() throws RecognitionException {
		ParamsessionContext _localctx = new ParamsessionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_paramsession);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(ACOL);
			setState(113);
			match(T__2);
			setState(114);
			match(FCOL);
			setState(115);
			list_ids();
			setState(116);
			match(TWODOTS);
			setState(117);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public InteiroContext inteiro() {
			return getRuleContext(InteiroContext.class,0);
		}
		public BooleanoContext booleano() {
			return getRuleContext(BooleanoContext.class,0);
		}
		public FloateContext floate() {
			return getRuleContext(FloateContext.class,0);
		}
		public StringeiContext stringei() {
			return getRuleContext(StringeiContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tipo);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGITO:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				inteiro();
				}
				break;
			case True:
			case False:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				booleano();
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				floate();
				}
				break;
			case LETRA:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				stringei();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InteiroContext extends ParserRuleContext {
		public List<TerminalNode> DIGITO() { return getTokens(minipascalParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(minipascalParser.DIGITO, i);
		}
		public InteiroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inteiro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterInteiro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitInteiro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitInteiro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InteiroContext inteiro() throws RecognitionException {
		InteiroContext _localctx = new InteiroContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_inteiro);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(125);
					match(DIGITO);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(128); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			{
			setState(130);
			match(DIGITO);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanoContext extends ParserRuleContext {
		public TerminalNode True() { return getToken(minipascalParser.True, 0); }
		public TerminalNode False() { return getToken(minipascalParser.False, 0); }
		public BooleanoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleano; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterBooleano(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitBooleano(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitBooleano(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanoContext booleano() throws RecognitionException {
		BooleanoContext _localctx = new BooleanoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_booleano);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !(_la==True || _la==False) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloateContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(minipascalParser.NUMBER, 0); }
		public FloateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterFloate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitFloate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitFloate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FloateContext floate() throws RecognitionException {
		FloateContext _localctx = new FloateContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_floate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringeiContext extends ParserRuleContext {
		public TerminalNode LETRA() { return getToken(minipascalParser.LETRA, 0); }
		public StringeiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringei; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterStringei(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitStringei(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitStringei(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringeiContext stringei() throws RecognitionException {
		StringeiContext _localctx = new StringeiContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stringei);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(LETRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof minipascalListener ) ((minipascalListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof minipascalVisitor ) return ((minipascalVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_comando);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(T__3);
			{
			setState(139);
			cmd();
			}
			setState(140);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
